--- a/css/style.css
+++ b/css/style.css
@@ -176,8 +176,9 @@ a {
   padding-bottom: 60px;
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
+  overflow: hidden;
 }
 
 .features .feature {
@@ -271,6 +272,7 @@ a {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 50px;
+  overflow: hidden;
 }
 
 .portfolio-cards > div {
@@ -303,7 +305,7 @@ a {
 .about-inside {
   margin-top: 120px;
   display: grid;
-  grid-template-columns: repeat(2, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 10px;
 }
 
